<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1FA562"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/tap_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box1"
            style="@style/tap_box"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginStart="16dp"
            android:text="@string/box_content1"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/box2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/box2"
            style="@style/tap_box"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:layout_marginEnd="16dp"
            android:text="@string/box_content2"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/box3"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toEndOf="@+id/box1"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/box3"
            style="@style/tap_box"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:layout_marginEnd="16dp"
            android:text="@string/box_content3"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/box2"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/box4"
            style="@style/tap_box"
            android:layout_width="183dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/box_content4"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box5"
            style="@style/tap_box"
            android:layout_width="170dp"
            android:layout_height="136dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_content5"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/box4"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Instruct_box"
            style="@style/tap_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/instruction_box"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
